upload whatsaap redirect
addon whatsapp redirect

--- a/setup/win32/Makefile
+++ b/setup/win32/Makefile
@@ -5,12 +5,14 @@ include Makefile.servicename
 SERVER_DIRECTORY=../..
 FILES_DIRECTORY=release
 
-LAUNCH_PY2EXE_SERVICE=/cygdrive/c/python${PYTHON_VERSION}/python.exe win32_setup.py py2exe
-LAUNCH_PY2EXE=/cygdrive/c/python${PYTHON_VERSION}/python.exe setup.py py2exe
+#LAUNCH_PY2EXE_SERVICE=/cygdrive/c/WinPython${PYTHON_VERSION}/python.exe win32_setup.py py2exe
+#LAUNCH_PY2EXE=/cygdrive/c/WinPython${PYTHON_VERSION}/python.exe setup.py py2exe
+LAUNCH_PY2EXE_SERVICE=/cygdrive/c/WinPython/python.exe win32_setup.py py2exe
+LAUNCH_PY2EXE=/cygdrive/c/WinPython/python.exe setup.py py2exe
 
 MAKENSIS_ARGUMENTS=/DVERSION=$(VERSION) /DSERVICENAME=${SERVICENAME}
 
-LAUNCH_MAKENSIS=/cygdrive/c/tools/cygwin/makensis $(MAKENSIS_ARGUMENTS) setup.nsi
+LAUNCH_MAKENSIS=/cygdrive/c/cygwin64/tools/NSIS/makensis $(MAKENSIS_ARGUMENTS) setup.nsi
 
 default: allinone
 
